DCBBRAIN-2672 Переводим передачу метаданных Фрод-мониторинга из RequestBody в RequestHeader для реста создания подписи счета
