# partners-openapi/openapi/partners/partner.yaml
@@ -1,7 +1,7 @@
 openapi: "3.0.3"
 info:
   title: Request for partners
-  version: 1.0.5
+  version: 1.0.6
   description: OpenAPI Specification for partners
 
 servers:
@@ -75,35 +75,6 @@ paths:
           schema:
             $ref: 'model/fraud/fraud_meta_data.json'
           description: Метаданные для ФРОД-мониторинга
-      responses:
-        204:
-          description: Успешный ответ
-        404:
-          description: Not Found
-        400:
-          description: Bad Request
-          content:
-            application/json:
-              schema:
-                $ref: 'model/common/error.json'
-        401:
-          description: Unauthorized
-        403:
-          description: Forbidden
-
-  /partners/delete:
-    post:
-      tags:
-        - Partners
-      description: Удаление Партнера
-      operationId: deletePartners
-      requestBody:
-        description: Партнеры
-        required: true
-        content:
-          application/json:
-            schema:
-              $ref: 'model/partners/partner_delete.json'
       responses:
         204:
           description: Успешный ответ
