# partners-rest/src/main/java/ru/sberbank/pprb/sbbol/partners/partners/AccountSignController.java
@@ -3,9 +3,11 @@ package ru.sberbank.pprb.sbbol.partners.partners;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.RestController;
 import ru.sberbank.pprb.sbbol.partners.AccountsSignApi;
+import ru.sberbank.pprb.sbbol.partners.aspect.validator.FraudValid;
 import ru.sberbank.pprb.sbbol.partners.model.AccountSignInfo;
 import ru.sberbank.pprb.sbbol.partners.model.AccountsSignInfo;
 import ru.sberbank.pprb.sbbol.partners.model.AccountsSignInfoResponse;
+import ru.sberbank.pprb.sbbol.partners.model.FraudMetaData;
 import ru.sberbank.pprb.sbbol.partners.service.partner.AccountSignService;
 
 import java.util.List;
@@ -19,9 +21,10 @@ public class AccountSignController implements AccountsSignApi {
         this.accountSignService = accountSignService;
     }
 
+    @FraudValid
     @Override
-    public ResponseEntity<AccountsSignInfoResponse> create(AccountsSignInfo accountsSignInfo) {
-        return ResponseEntity.ok(accountSignService.createAccountsSign(accountsSignInfo));
+    public ResponseEntity<AccountsSignInfoResponse> create(FraudMetaData fraudMetaData,AccountsSignInfo accountsSignInfo) {
+        return ResponseEntity.ok(accountSignService.createAccountsSign(accountsSignInfo, fraudMetaData));
     }
 
     @Override
